--- a/home.html
+++ b/home.html
@@ -1,15 +1,6 @@
 <html>
 <head>
-<title>homepage/<title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142389139-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-142389139-1');
-</script>
+<title>homepage</title>
 </head>
 <body>
 Hello Google Analytics
